--- a/src/app/_component/stt-setting/stt-setting.component.html
+++ b/src/app/_component/stt-setting/stt-setting.component.html
@@ -64,16 +64,16 @@
                 <div class="col-lg-12">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <stt-header [selectedMenu]="selectedMenu"></stt-header>
+                            <!-- <stt-header
+                                [selectedMenu]="selectedMenu" >
+                            </stt-header> -->
                             <div class="row">
                                 <!-- sid -->
                                 <div class="col-xs-3 col-sm-2 sidebar-offcanvas" id="sidebar" style="padding-right: inherit;">
                                     <div class="list-group" style="margin-bottom: 0px;">
-                                        <a *ngFor="let taskType of sttSidebar; let i = index" [id]="taskType.type"
-                                            class="list-group-item"
+                                        <a *ngFor="let taskType of sttSidebar; let i = index" [id]="taskType.type" class="list-group-item"
                                             [ngClass]="taskType.type === selectedMenu.type && selectedMenu.active === true ? 'active': ''"
-                                            [routerLink]="taskType.router"
-                                            (click)="changeTask(taskType, i)"
+                                            [routerLink]="taskType.router" (click)="changeTask(taskType, i)"
                                             style="padding: 5px 10px;">
                                             <span class="glyphicon glyphicon-edit"></span> {{taskType.title}}
                                         </a>
