--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -571,7 +571,17 @@ td {
 
 .badge-aws  {
   color: #fff;
+  background-color: coral;
+}
+
+.badge-api  {
+  color: #fff;
   background-color: #a94442;
+}
+
+.badge-websocket  {
+  color: #fff;
+  background-color: #a99d42;
 }
 
 .badge-warning  {
@@ -927,4 +937,21 @@ a {
   }
 }
 
+.borderd-content {
+  border: 2px solid #ddd;
+  border-radius: 4px;
+  position: relative;
+}
 
+.borderd-content .title {
+  margin: -14px 0 0 10px;
+  background: #fff;
+  padding: 3px;
+  display: inline-block;
+  font-weight: bold;
+  position: absolute;
+}
+
+.borderd-content .content {
+  padding: 10px;
+}
