--- a/src/app/_component/stt-setting/stt-header/stt-header.component.html
+++ b/src/app/_component/stt-setting/stt-header/stt-header.component.html
@@ -5,25 +5,25 @@
         </h5>
     </div>
     <div class="col-lg-5" style="margin-top: 5px;text-align: end;">
-        <button type="button" class="form-control input-sm"
+        <button *ngIf="refreshButton && refreshButton.active" type="button" class="form-control input-sm"
             style="width: auto;display: inline;margin-right: 7px;"
             (click)="refreshAction()">
             <span id="loading" class="glyphicon glyphicon-refresh"></span>
             Refresh</button>
-        <button type="button" class="form-control input-sm"
+        <button *ngIf="addButton" type="button" class="form-control input-sm"
             style="width: auto; background: #cb0f43;color: white;
                 display: inline;margin-right: 7px;" 
             (click)="addAction()">
             <span class="glyphicon glyphicon-plus-sign"></span>
-            {{selectedMenu.subLink.title}}
+            {{addButton.title}}
         </button>
-        <div class="dropdown" style="display: inline;">
+        <div *ngIf="dropdownButton" class="dropdown" style="display: inline;">
             <button class="btn btn-primary dropdown-toggle"
-                style="padding: 4px 5px;border-radius: 3px;"
-                type="button" data-toggle="dropdown">Dropdown Example
+                style="padding: 4px 5px;border-radius: 3px;background: #4750b6;"                
+                type="button" data-toggle="dropdown">Batch Operation
                 <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <li><a  routerLink="{{selectedMenu.router}}/batch">Upload File</a></li>
+            <ul class="dropdown-menu" style="left: -38px;">
+                <li><a routerLink="{{selectedMenu.router}}/batch">Upload File</a></li>
                 <li><a href="#">Downalod File</a></li>
                 <li><a href="#">Downalod Template</a></li>
             </ul>
