--- a/src/app/_component/stt-setting/stt-list/stt-list.component.html
+++ b/src/app/_component/stt-setting/stt-list/stt-list.component.html
@@ -1,17 +1,46 @@
-<div class="form-group">
-    <label for="searchSourceJobDetails" *ngIf="lookupDatas">
-        Total TaskType ({{lookupDatas.length}})
-    </label>
-    <input type="text" id="searchLookup"
-        class="form-control input-sm"
-        style="width: 35%;" 
-        [(ngModel)]="searchLookup"
-        placeholder="Search by any key" />
+<div class="row">
+    <div class="col-lg-6">
+        <label *ngIf="sourceTaskTypes">
+            Total STT ({{sourceTaskTypes.length}})
+        </label>
+        <input type="text" id="searchValue"
+            class="form-control input-sm" 
+            style="width: 60%;"
+            [(ngModel)]="searchValue"
+            placeholder="Search by any key" />
+    </div>
+    <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
+        <!-- working -->
+        <button *ngIf="refreshButton && refreshButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto;display: inline;margin-right: 7px;"
+            (click)="refreshAction()">
+            <span id="loading" class="glyphicon glyphicon-refresh"></span>
+            {{refreshButton.title}}
+        </button>
+        <!-- working -->
+        <button *ngIf="addButton && addButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto; background: #cb0f43;color: white;
+            display: inline;margin-right: 7px;" 
+            (click)="addAction()">
+            <span class="glyphicon glyphicon-plus-sign"></span>
+            {{addButton.title}}
+        </button>
+        <div *ngIf="dropdownButton && dropdownButton.active" class="dropdown" style="display: inline;">
+            <button class="btn btn-primary dropdown-toggle"
+                style="padding: 4px 5px;border-radius: 3px;background: #4750b6;"                
+                type="button" data-toggle="dropdown">{{dropdownButton.title}}
+                <span class="caret"></span></button>
+            <ul class="dropdown-menu" style="left: -38px;">
+                <li *ngFor="let menu of dropdownButton.menus">
+                    <a href="#">{{menu.title}}</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-<table id="source-task-type"
-    class="table table-responsive table
-        table-striped table-bordered table-sm"
-        style="font-size: 12px;">
+<table id="source-task-type" style="font-size: 12px;margin-top: 10px;"
+    class="table table-responsive table table-striped table-bordered table-sm">
     <thead>
         <tr>
             <th style="width: 4%;">-</th>
@@ -23,33 +52,27 @@
             <th>Total Task</th>
             <th>Total Form</th>
             <th>Type</th>
-            <!-- <th>Status</th> -->
-            <th style="width: 14%;">Action</th>
+            <th style="width: 10%;">Action</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let sourceTaskType of sourceTaskTypes | searchFilter: searchLookup; let i = index">
             <td style="text-align: center;">
                 <div class="Yf">
-                    <!-- [ngClass]="sourceTaskType.isdefult ? 'Yg_no': 'Yg_yes'" -->
                     <div [ngClass]="{
-                        'Yg_delete': sourceTaskType.status === 'Delete', 
-                        'Yg_inactive' : sourceTaskType.status === 'Inactive',
-                        'Yg_active' : sourceTaskType.status === 'Active'
+                        'Yg_inactive' : sourceTaskType.status.lookupValue === 0,
+                        'Yg_active' : sourceTaskType.status.lookupValue === 1,
+                        'Yg_delete': sourceTaskType.status.lookupValue === 2
                     }"></div>
                 </div>
             </td>
-            <td>
-                {{sourceTaskType.sourceTaskTypeId}}
-            </td>
-            <td>
-                {{sourceTaskType.serviceName}}
+            <td>{{sourceTaskType.sttId}}</td>
+            <td>{{sourceTaskType.serviceName}}</td>
+            <td style="text-align: center;">
+                {{sourceTaskType.default ? 'Yes' : 'No'}}
             </td>
             <td style="text-align: center;">
-                {{sourceTaskType.isdefult ? 'Yes' : 'No'}}
-            </td>
-            <td style="text-align: center;">
-                {{sourceTaskType.dateCreated}}
+                {{sourceTaskType.dateCreated | date:'dd-MM-yyyy'}}
             </td>
             <td style="text-align: center;">
                 {{sourceTaskType.totalUser}}
@@ -63,46 +86,35 @@
             <td style="text-align: center;">
                 <span class="badge"
                     [ngClass]="{
-                        'badge-aws': sourceTaskType.sttType === 'Aws', 
-                        'badge-kafka' : sourceTaskType.sttType === 'Kafka'
-                    }">{{sourceTaskType.sttType}}</span>
+                        'badge-api': sourceTaskType.taskType.lookupValue === 0, 
+                        'badge-aws': sourceTaskType.taskType.lookupValue === 1, 
+                        'badge-websocket': sourceTaskType.taskType.lookupValue === 2, 
+                        'badge-kafka' : sourceTaskType.taskType.lookupValue === 3
+                    }">{{sourceTaskType.taskType.description}}</span>
             </td>
-            <!-- <td style="text-align: center;">
-                <span class="badge"
-                    [ngClass]="{
-                        'badge-danger': sourceTaskType.status === 'Delete', 
-                        'badge-info' : sourceTaskType.status === 'Inactive',
-                        'badge-success' : sourceTaskType.status === 'Active'
-                    }">{{sourceTaskType.status}}</span>
-            </td> -->
             <td style="text-align: center;">
                 <div class="btn-group btn-group-xs" 
                     role="group" style="text-align: center">
                     <button type="button" class="btn btn-default"
-                        data-toggle="modal" data-target="#sourceTaskTaype">
+                        (click)="editAction(sourceTaskType)">
                         <span class="glyphicon glyphicon-edit"
-                            style="color:blue"></span>
-                    </button>
-                    <button type="button" class="btn btn-default"
-                        data-toggle="modal" data-target="#sourceTaskTaype">
-                        <span class="glyphicon glyphicon-eye-open"
-                            style="color:#008063"></span>
-                   </button>
-                    <!-- download source tasktype -->
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-download"
-                            style="color:#17a2b8">
-                        </span>
+                        style="color:blue"></span>
                     </button>
                     <!-- add the method for delete the queue detail -->
                     <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-trash"
-                            style="color: #dc3545;"></span>
+                        <span class="glyphicon glyphicon-trash" style="color: #dc3545;"></span>
                     </button>
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-cog"
+                    <!--  -->
+                    <button type="button"
+                        class="btn btn-default dropdown-toggle" 
+                        data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-cog" 
                         style="color: black;"></span>
                     </button>
+                    <ul class="dropdown-menu" style="left: -90px;">
+                        <li *ngFor="let menu of dropdownButton.menus">
+                            <a href="#">{{menu.title}}</a></li>
+                    </ul>
                 </div>
             </td>
         </tr>
