--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -8,6 +8,50 @@
         [(ngModel)]="searchLookup"
         placeholder="Search by any key" />
 </div>
+
+<div class="row">
+    <div class="col-lg-6">
+        <label for="searchSourceJobDetails" *ngIf="sourceTaskTypes">
+            Total STT ({{sourceTaskTypes.length}})
+        </label>
+        <input type="text" id="searchLookup"
+            class="form-control input-sm" 
+            style="width: 60%;"
+            [(ngModel)]="searchLookup"
+            placeholder="Search by any key" />
+    </div>
+    <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
+        <!-- working -->
+        <button *ngIf="refreshButton && refreshButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto;display: inline;margin-right: 7px;"
+            (click)="refreshAction()">
+            <span id="loading" class="glyphicon glyphicon-refresh"></span>
+            {{refreshButton.title}}
+        </button>
+        <!-- working -->
+        <button *ngIf="addButton && addButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto; background: #cb0f43;color: white;
+            display: inline;margin-right: 7px;" 
+            (click)="addAction()">
+            <span class="glyphicon glyphicon-plus-sign"></span>
+            {{addButton.title}}
+        </button>
+        <div *ngIf="dropdownButton && dropdownButton.active" class="dropdown" style="display: inline;">
+            <button class="btn btn-primary dropdown-toggle"
+                style="padding: 4px 5px;border-radius: 3px;background: #4750b6;"                
+                type="button" data-toggle="dropdown">{{dropdownButton.title}}
+                <span class="caret"></span></button>
+            <ul class="dropdown-menu" style="left: -38px;">
+                <li *ngFor="let menu of dropdownButton.menus">
+                    <a href="#">{{menu.title}}</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+
 <table id="source-task-type" class="table table-responsive table
     table-striped table-bordered table-sm" style="font-size: 12px;">
     <thead>
@@ -16,12 +60,10 @@
             <th style="width: 4%;"># No</th>
             <th>Order</th>
             <th>Section Name</th>
-            <!-- <th>Description</th> -->
             <th>Created Date</th>
             <th>Total Form</th>
             <th>Total STT</th>
             <th>Total Control</th>
-            <!-- <th>Status</th> -->
             <th style="width: 12%;">Action</th>
         </tr>
     </thead>
@@ -30,9 +72,9 @@
             <td style="text-align: center;">
                 <div class="Yf">
                     <div [ngClass]="{
-                        'Yg_delete': sttSection.status === 'Delete', 
-                        'Yg_inactive' : sttSection.status === 'Inactive',
-                        'Yg_active' : sttSection.status === 'Active'
+                        'Yg_inactive' : sourceTaskType.status.lookupValue === 0,
+                        'Yg_active' : sourceTaskType.status.lookupValue === 1,
+                        'Yg_delete': sourceTaskType.status.lookupValue === 2
                     }"></div>
                 </div>
             </td>
@@ -45,9 +87,6 @@
             <td>
                 {{sttSection.sectionName}}
             </td>
-            <!-- <td>
-                {{sttSection.description}}
-            </td> -->
             <td style="text-align: center;">
                 {{sttSection.dateCreated}}
             </td>
@@ -60,36 +99,22 @@
             <td style="text-align: center;">
                 {{sttSection.totalControl}}
             </td>
-            <!-- <td style="text-align: center;">
-                <span class="badge"
-                    [ngClass]="{
-                        'badge-danger': sttSection.status === 'Delete', 
-                        'badge-info' : sttSection.status === 'Inactive',
-                        'badge-success' : sttSection.status === 'Active'
-                    }">{{sttSection.status}}</span>
-            </td> -->
             <td style="text-align: center;">
-                <div class="btn-group btn-group-xs" 
-                    role="group" style="text-align: center">
-                    <button type="button" class="btn btn-default"
-                        data-toggle="modal" data-target="#sourceTaskTaype">
-                        <span class="glyphicon glyphicon-edit"
-                            style="color:blue"></span>
+                <div class="btn-group btn-group-xs" role="group" style="text-align: center">
+                    <button type="button" class="btn btn-default">
+                        <span class="glyphicon glyphicon-edit" style="color:blue"></span>
                     </button>
                     <!-- download source tasktype -->
                     <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-download"
-                            style="color:#17a2b8">
+                        <span class="glyphicon glyphicon-download" style="color:#17a2b8">
                     </span>
                     </button>
                     <!-- add the method for delete the queue detail -->
                     <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-trash"
-                            style="color: #dc3545;"></span>
+                        <span class="glyphicon glyphicon-trash" style="color: #dc3545;"></span>
                     </button>
                     <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-cog"
-                            style="color: black;"></span>
+                        <span class="glyphicon glyphicon-cog" style="color: black;"></span>
                     </button>
                 </div>
             </td>
